Adding LithoStrat tree

--- a/Specify/src/resources_en.properties
+++ b/Specify/src/resources_en.properties
@@ -117,7 +117,7 @@ EXPORTING_DONE=Done exporting to %s
 # Generic Errors
 #################################
 UnhandledExceptionTitle=Unhandled Exception
-ERROR_CREATNG_BARCHART=An problem ocurred while creating the bar chart.
+ERROR_CREATNG_BARCHART=An problem occurred while creating the bar chart.
 NO_RECORD_SETS=There are no matching Bundles.
 LoginUserMismatch=There is no Specify User Record for your database login ID.\n The application will exit.
 LoginUserMismatchTitle=Missing Specify User
@@ -125,7 +125,7 @@ UPDATE_DATA_STALE=The data in the form has been updated by someone else.\nPress 
 DELETE_DATA_STALE=The data in the form has been updated by someone else and was not deleted.\nPress OK to refresh the form with the new values.
 DUPLICATE_KEY_ERROR=Specify could not recover from a duplicate key error.
 UNRECOVERABLE_DB_ERROR=Specify was unable to recover from a database update problem.
-ERROR_LABELS_RECORDSET_TABLEID=Labels cannot receieve this type of records.
+ERROR_LABELS_RECORDSET_TABLEID=Labels cannot receive this type of records.
 OBJ_NOT_DELETED=The data object was not deleted. 
 ERROR_RECORDSET_TABLEID=The items in this bundle cannot be used for this action.
 ERROR_MISSING_RS_OR_NOITEMS=The Record Set is missing or it has not items.
@@ -267,10 +267,15 @@ LocationMenu=Location Trees
 LocationMnemonic=L
 LocationStarterPaneText=This is the location tree editor
 
-GeoTimePeriodTree=Lithostratigraphy Trees
-GeoTimePeriodMenu=Lithostratigraphy Trees
+GeoTimePeriodTree=Geologic Time Period Trees
+GeoTimePeriodMenu=Geologic Time Period Trees
 GeoTimePeriodMnemonic=G
-GeoTimePeriodStarterPaneText=This is the lithostratigraphy tree editor
+GeoTimePeriodStarterPaneText=This is the Geologic Time Period tree editor
+
+LithoStratTree=Litho Stratigraphy Trees
+LithoStratMenu=Litho Stratigraphy Trees
+LithoStratMnemonic=S
+LithoStratStarterPaneText=This is the Litho Stratigraphy tree editor
 
 GeographyTree=Geography Trees
 GeographyMenu=Geography Trees
@@ -854,6 +859,9 @@ HabitatAttributes=Habitat Attributes
 InfoRequest=Info Request
 Institution=Institution
 Journal=Journal
+LithoStrat=Litho Stratigraphy
+LithoStratTreeDef=LithoStrat Tree Def
+LithoStratTreeDefItem=LithoStrat Tree Def Item
 Loan=Loan
 LoanAgent=Loan Agent
 LoanPhysicalObject=Loan Physical Object
